src/test/run-pass/fail.rs
fn main() -> () {
   check (1 == 2);
}
