src/test/compile-fail/output-type-mismatch.rs
fn f() -> () {
}

fn main() -> () {
  let int i;
  i = f();
}
